<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/bg_toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:fontFamily="monospace"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <ImageButton
            android:onClick="closeActivity"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_rounded"
            android:fontFamily="monospace"
            android:text="@string/setting_text1"
            android:textSize="30sp" />


        <Switch
            android:id="@+id/switchRequestRespond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:switchMinWidth="60dp"
            android:text="@string/notif1"
            android:textColor="@color/black"
            android:textOff="@string/text_off"
            android:textOn="@string/text_on"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switchDataUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:switchMinWidth="60dp"
            android:text="@string/notif2"
            android:textColor="@color/black"
            android:textOff="@string/text_off"
            android:textOn="@string/text_on"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_rounded"
            android:fontFamily="monospace"
            android:text="@string/setting_text2"
            android:textSize="30sp" />

        <RadioGroup
            android:id="@+id/radioGroupTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <RadioButton
                android:id="@+id/radioDefaultTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:text="@string/theme1"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioLightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:text="@string/theme2"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/radioDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:text="@string/theme3"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>